Finished slide shaders + demo.